# media-factory

./: .gitignore  CONNECTORS.md  README.md
deploy/: .env.example  Caddyfile  README.md  docker-compose.yml
deploy/scripts/: backup-n8n.sh  push-to-vps.sh  setup-vps.sh
n8n-workflows/: README.md  analyst-daily.json  approval-webhook.json  daily-run.json  publish-slots.json
skills-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
skills-service/src/: __init__.py  auth.py  config.py  logging_config.py  main.py
skills-service/src/clients/: __init__.py  anthropic_client.py  creatomate.py  epidemic.py  falai.py  notion.py  r2.py  social_platforms.py  telegram.py
skills-service/src/routers/: __init__.py  analyst.py  producer.py  publisher.py  scorer.py  strategist.py
skills-service/src/schemas/: __init__.py  analyst.py  producer.py  publisher.py  scorer.py  strategist.py
skills-service/src/skills/: __init__.py  analyst.py  producer.py  publisher.py  scorer.py  strategist.py
skills-service/src/tool_definitions/: __init__.py  analyst.json  producer.json  publisher.json  scorer.json  strategist.json
skills-service/tests/: test_basic.py
